corrected image alignment bug for desktop

--- a/style.css
+++ b/style.css
@@ -50,9 +50,8 @@ section.alternate-background {
 }
 
 .group img {
-  align-self: center;
-  width: 100%;
-  height: 100%;
+  max-width: 100%;
+  height: auto;
 }
 
 .group-field {
@@ -77,6 +76,7 @@ section.alternate-background {
   align-items: flex-start;
   align-self: flex-start;
 }
+
 
 /* -------  Navigation ------- */
 
@@ -198,9 +198,9 @@ footer p {
       display: flex;
       flex-direction: column;
       flex-wrap: wrap;
+      width: 50%;
     }
     
-
     .group-form {
       display: flex;
       justify-content: space-around;
@@ -233,7 +233,7 @@ footer p {
       align-items: center;
       align-self: center;
     }
-    
+  
 
   /* -------  Search Form ------- */
 
